--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @inproceedings{braintasks2020,
     title = {Modeling Task Effects on Meaning Representation in the Brain via Zero-Shot MEG Prediction},
-    author = {Toneva<nobr><em>*</em></nobr>, Mariya and Stretcu<nobr><em>*</em></nobr>, Otilia and Póczos, Barnabás  and Mitchell, Tom},
+    author = {Toneva<nobr><em>*</em></nobr>, Mariya and Stretcu<nobr><em>*</em></nobr>, Otilia and Póczos, Barnabás and Wehbe, Leila and Mitchell, Tom},
     booktitle = {Proceedings of the Thirty-fourth Conference on Neural Information Processing Systems},
     year = {2020},
     organization = {Neural Information Processing Systems},
