--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,27 @@
 ---
 ---
+@inproceedings{VPD,
+  title={{Visual Program Distillation: Distilling Tools and Programmatic Reasoning into Vision-Language Models}},
+  author={Hu, Yushi and Stretcu, Otilia and Lu, Chun-Ta and Viswanathan, Krishnamurthy and Hata, Kenji and Luo, Enming and Krishna, Ranjay and Fuxman, Ariel},
+  booktitle={{Proceedings of the Forty-First IEEE/CVF Conference on Computer Vision and Pattern Recognition. Oral presentation}},
+  year={2024},
+  abbr = {CVPR},
+  website = {https://visual-program-distillation.github.io/},
+  arxiv = {2312.03052},
+  video = {https://www.youtube.com/watch?v=mofEOquxPjQ&ab_channel=YushiHu},
+  abstract={{Solving complex visual tasks such as "Who invented the musical instrument on the right?" involves a composition of skills: understanding space, recognizing instruments, and also retrieving prior knowledge. Recent work shows promise by decomposing such tasks using a large language model (LLM) into an executable program that invokes specialized vision models. However, generated programs are error-prone: they omit necessary steps, include spurious ones, and are unable to recover when the specialized models give incorrect outputs. Moreover, they require loading multiple models, incurring high latency and computation costs. We propose Visual Program Distillation (VPD), an instruction tuning framework that produces a vision-language model (VLM) capable of solving complex visual tasks with a single forward pass. VPD distills the reasoning ability of LLMs by using them to sample multiple candidate programs, which are then executed and verified to identify a correct one. It translates each correct program into a language description of the reasoning steps, which are then distilled into a VLM. Extensive experiments show that VPD improves the VLM's ability to count, understand spatial relations, and reason compositionally. Our VPD-trained PaLI-X outperforms all prior VLMs, achieving state-of-the-art performance across complex vision tasks, including MMBench, OK-VQA, A-OKVQA, TallyQA, POPE, and Hateful Memes. An evaluation with human annotators also confirms that VPD improves model response factuality and consistency. Finally, experiments on content moderation demonstrate that VPD is also helpful for adaptation to real-world applications with limited data.}},
+}
+
+@inproceedings{copilot,
+  title={{Modeling Collaborator: Enabling Subjective Vision Classification With Minimal Human Effort via LLM Tool-Use}},
+  author={Toubal, Imad Eddine and Avinash, Aditya and Alldrin, Neil Gordon and Dlabal, Jan and Zhou, Wenlei and Luo, Enming and Stretcu, Otilia and Xiong, Hao and Lu, Chun-Ta and Zhou, Howard and Krishna, Ranjay and Fuxman, Ariel and Duerig, Tom},
+  booktitle={{Proceedings of the Forty-First IEEE/CVF Conference on Computer Vision and Pattern Recognition}},
+  year={2024},
+  abbr = {CVPR},
+  arxiv = {2403.02626},
+  abstract={{From content moderation to wildlife conservation, the number of applications that require models to recognize nuanced or subjective visual concepts is growing. Traditionally, developing classifiers for such concepts requires substantial manual effort measured in hours, days, or even months to identify and annotate data needed for training. Even with recently proposed Agile Modeling techniques, which enable rapid bootstrapping of image classifiers, users are still required to spend 30 minutes or more of monotonous, repetitive data labeling just to train a single classifier. Drawing on Fiske's Cognitive Miser theory, we propose a new framework that alleviates manual effort by replacing human labeling with natural language interactions, reducing the total effort required to define a concept by an order of magnitude: from labeling 2,000 images to only 100 plus some natural language interactions. Our framework leverages recent advances in foundation models, both large language models and vision-language models, to carve out the concept space through conversation and by automatically labeling training data points. Most importantly, our framework eliminates the need for crowd-sourced annotations. Moreover, our framework ultimately produces lightweight classification models that are deployable in cost-sensitive scenarios. Across 15 subjective concepts and across 2 public image classification datasets, our trained models outperform traditional Agile Modeling as well as state-of-the-art zero-shot classification models like ALIGN, CLIP, CuPL, and large visual question-answering models like PaLI-X.}},
+}
+
 @inproceedings{scaling_up_llm,
   title={Scaling Up LLM Reviews for Google Ads Content Moderation},
   author={Qiao, Wei and Dogra, Tushar and Stretcu, Otilia and Lyu, Yu-Han and Fang, Tiantian and Kwon, Dongjin and Lu, Chun-Ta and Luo, Enming and Wang, Yuan and Chia, Chih-chun and Fuxman, Ariel and Wang, Noah and Krishna, Ranjay and Tek, Mehmet
@@ -15,9 +37,9 @@
   author={Stimberg, Florian and Chakrabarti, Ayan and Lu, Chun-Ta and Hazimeh, Hussein and Stretcu, Otilia and Qiao, Wei and Liu, Yintao and Kaya, Merve and Rashtchian,Cyrus and Fuxman, Ariel and Tek, Mehmet and Gowal, Sven
   },
   booktitle={Proceedings of the Thirty-Seventh Conference on Neural Information Processing Systems},
-  year={2023},
+  year ={2023},
   abbr = {NeurIPS},
-  code= {https://github.com/google-deepmind/image_obfuscation_benchmark},
+  code = {https://github.com/google-deepmind/image_obfuscation_benchmark},
   arxiv = {2301.12993},
   pdf = {obfuscation_benchmark/obfuscation_benchmark.pdf},
   abstract={{Automated content filtering and moderation is an important tool that allows online platforms to build striving user communities that facilitate cooperation and prevent abuse. Unfortunately, resourceful actors try to bypass automated filters in a bid to post content that violate platform policies and codes of conduct. To reach this goal, these malicious actors may obfuscate policy violating images (e.g. overlay harmful images by carefully selected benign images or visual patterns) to prevent machine learning models from reaching the correct decision. In this paper, we invite researchers to tackle this specific issue and present a new image benchmark. This benchmark, based on ImageNet, simulates the type of obfuscations created by malicious actors. It goes beyond ImageNet-C and ImageNet-C¯ by proposing general, drastic, adversarial modifications that preserve the original content intent. It aims to tackle a more common adversarial threat than the one considered by Lp-norm bounded adversaries. We evaluate 33 pretrained models on the benchmark and train models with different augmentations, architectures and training methods on subsets of the obfuscations to measure generalization. We hope this benchmark will encourage researchers to test their models and methods and try to find new approaches that are more robust to these obfuscations.}},
